fixed alignment of error-message

--- a/app/styles/components/domain/domain-view.css
+++ b/app/styles/components/domain/domain-view.css
@@ -60,10 +60,13 @@
 }
 
 :global(#rdf-error .rdf-error-message) {
-  position:absolute;
+  position: absolute;
+  width: 100%;
+  padding-right: 25px;
   float: right;
   margin-top: 2px;
   display: block;
+  text-align: right;
 }
 
 :global(#rdf-error i.textarea-validation-error-hint) {
